Add alternate version of installer / zip which bundles jre runtime